ダウンロード方法の統一